hphp/hack/test/typecheck/trait_reuse/trait_diamond_final_2.bad.php.exp
File "trait_diamond_final_2.bad.php", line 16, characters 7-7:
Traits with final methods cannot be reused, and `T` is already used by `ParentClass`. (Typing[4186])
  File "trait_diamond_final_2.bad.php", line 10, characters 7-17:
  `ParentClass` is defined here
  File "trait_diamond_final_2.bad.php", line 11, characters 7-7:
  `ParentClass` uses `T`
  File "trait_diamond_final_2.bad.php", line 7, characters 32-32:
  `T` has a final method `f`
